<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/dialogPayPalLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paypal_dialog_title"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextDonationAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paypal_dialog_hint"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paypal_dialog_button"/>
</LinearLayout>
