<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Contenedor para la imagen de fondo -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Imagen de fondo -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />
    </FrameLayout>

    <!-- ScrollView para el contenido desplazable -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Contenedor principal para el contenido desplazable -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="600dp">

            <!-- Contenedor para los botones superiores -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Botón en la esquina superior izquierda -->
                <Button
                    android:id="@+id/GuardarImagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:textColor="@android:color/white"
                    android:onClick="buttonTopLeftAction"
                    android:background="@drawable/rounded_button_border"
                    android:layout_marginEnd="0dp"/>

                <!-- Botón de PayPal en el centro -->
                <Button
                    android:id="@+id/PaypalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/rounded_button_border"
                    android:onClick="showDonationDialog"
                    android:text="@string/paypal_dialog_donation"
                    android:textColor="@android:color/white" />

                <!-- Botón en la esquina superior derecha -->
                <Button
                    android:id="@+id/EstablecerComoFondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_border"
                    android:onClick="buttonTopRightAction"
                    android:text="@string/establecer_fondo"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="-8dp"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"/>
            </LinearLayout>

            <!-- Contenedor para el EditText -->
            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/input_text_hint"
                android:inputType="text"
                android:textColor="@android:color/white" />

            <!-- Contenedor para el botón único -->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Botón Generar y Mostrar Imagen -->
                <Button
                    android:id="@+id/buttonGenerarImagen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_border"
                    android:onClick="buttonAction"
                    android:text="@string/generar_y_mostrar"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <!-- ProgressBar para mostrar mientras se genera la imagen -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <!-- TextView -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="textview"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/LinearLayoutGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Botón Generar y Mostrar Imagen -->
                <Button
                    android:id="@+id/ButtonImageGallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_border"
                    android:onClick="buttonAction"
                    android:text="@string/imagen_galeria"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- Layout para el diálogo de donación -->
    <LinearLayout
        android:id="@+id/donationDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white"
        android:visibility="gone"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal_dialog_title"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextDonationAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paypal_dialog_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paypal_dialog_button"/>
    </LinearLayout>



</FrameLayout>
